[gd_scene load_steps=7 format=3 uid="uid://it1f3q7bl4le"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_j8ibr"]
[ext_resource type="Texture2D" uid="uid://bq470tchb8vjo" path="res://assets/art/ui/wood.jpg" id="3_xe51y"]
[ext_resource type="Texture2D" uid="uid://cnsteap44dgdy" path="res://assets/art/ui/golden_bar2.png" id="4_uhjoh"]
[ext_resource type="Texture2D" uid="uid://gni83whcoogs" path="res://assets/icon.svg" id="5_1isqj"]
[ext_resource type="PackedScene" uid="uid://cyjejqvy7vq4q" path="res://scenes/gear_container.tscn" id="6_8ut51"]
[ext_resource type="Script" path="res://scenes/shop_button.gd" id="6_d7ejv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_j8ibr")

[node name="GearContainer" parent="." instance=ExtResource("6_8ut51")]
position = Vector2(1, 698)

[node name="UI" type="CanvasLayer" parent="."]

[node name="WoodenBar2" type="Sprite2D" parent="UI"]
modulate = Color(0.678944, 0.678944, 0.678944, 1)
z_index = 6
position = Vector2(536, 181)
scale = Vector2(0.570312, 0.643761)
texture = ExtResource("3_xe51y")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 553.025)

[node name="GoldenBar2" type="Sprite2D" parent="UI"]
z_index = 7
position = Vector2(539.5, 405)
scale = Vector2(0.57, 0.57)
texture = ExtResource("4_uhjoh")

[node name="Labels" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = 35.0
offset_right = 40.0
offset_bottom = 75.0
metadata/_edit_use_anchors_ = true

[node name="Label_resource1" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_right = 166.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource2" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 280.0
offset_right = 366.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource3" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 480.0
offset_right = 566.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource4" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 680.0
offset_right = 766.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource5" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 880.0
offset_right = 966.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource6" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_top = 141.0
offset_right = 166.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource7" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 280.0
offset_top = 141.0
offset_right = 366.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource8" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 480.0
offset_top = 141.0
offset_right = 566.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource9" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 680.0
offset_top = 141.0
offset_right = 766.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label_resource10" type="Label" parent="UI/Labels"]
z_index = 9
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 880.0
offset_top = 141.0
offset_right = 966.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1

[node name="shopButton" type="TextureButton" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -196.0
offset_right = -80.0
offset_bottom = -68.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_1isqj")
texture_pressed = ExtResource("5_1isqj")
script = ExtResource("6_d7ejv")

[node name="gear_button" type="Button" parent="."]
offset_left = 49.0
offset_top = 471.0
offset_right = 478.0
offset_bottom = 680.0
text = "Add a gear"

[connection signal="rotation_completed" from="GearContainer" to="." method="_on_gear_container_rotation_completed"]
[connection signal="pressed" from="gear_button" to="." method="_on_gear_button_pressed"]
